crates/sql-orm/tests/ui/entity_navigation_duplicate_attr.stderr
error: un campo solo puede declarar una navegación: belongs_to, has_one o has_many
  --> tests/ui/entity_navigation_duplicate_attr.rs:27:11
   |
27 |     #[orm(has_one(Profile, foreign_key = user_id))]
   |           ^^^^^^^
